code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_33.wast
(assert_invalid
  (module (func $type-value-void-vs-f64 (result f64)
    (block (result f64) (nop))
  ))
  "type mismatch"
)